@@ -8,6 +8,7 @@ version 0.5:
 	* Added properties field to Qpid::Proton::Message.
 	* Hashes are now automatically encoded into Data objects.
 	* Fixed encoding Time objects.
+	* Added instructions field to Qpid::Proton::Message.
 
 version 0.4:
 	* No language-specific features developed in this release.
